assets/app/scss/_navbar.scss
.navbar__logo {
  font-weight: normal;
  display: flex;
  flex-direction: row;
  align-items: baseline;
  justify-content: left;
}

.navbar__logo img {
  height: 0.9rem;
  width: 0.9rem;
  margin-right: 0.3rem;
}

.navbar__logo span {
  color: #000000;
  font-size: 1.125rem;
}

@media (min-width: 768px) {

  .navbar {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
  }
  .navbar > .container {
    display: flex;
    flex-wrap: inherit;
    align-items: center;
    justify-content: space-between;
  }

  .navbar__menu {
    display: flex;
    flex-direction: row;
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
  }

  .navbar__menu-link {
    padding: 0.25rem 0.5rem;
    color: #423f37;
  }
  .navbar__menu .dropdown-menu {
    position: static;
  }
  .navbar__menu-link:hover {
    color: #f04e36;
  }
  .navbar-dropdown-item a {
    color: #423f37;
  }
  .navbar-dropdown-item a:hover {
    color: #f04e36;
  }

  .navbar-dropdown {
    position: relative;
    display: inline-block;
  }

  .navbar-dropdown__button {
    cursor: pointer;
  }

  .navbar-dropdown__button:hover, .navbar-dropdown__button:focus {
  }

  .navbar-dropdown__content {
    display: none;
    position: absolute;
    background-color: #ffffff;
    min-width: 300px;
    overflow: auto;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 2000;
    padding: 1rem 1rem;
    left: auto;
    right: 0;
    list-style-type: none;
  }

  .navbar-dropdown__content a {
    color: black;
    padding: 0.25rem 0.5rem;
    text-decoration: none;
    display: block;
  }

  .navbar-dropdown a:hover {
  }

  .navbar-dropdown__content--show {
    display: block;
  }

  .navbar-dropdown__list {
    list-style: none;
    padding: 0;
    margin: 0;
  }

  .navbar-dropdown__link.asc {
    color: red;
  }

  .navbar-dropdown__link.desc {
    color: green;
  }
}


.navbar-dropdown-item a:hover {
  background-color: #f5f5f5;
}

@media (max-width: 767px) {

  /*
  .navbar__logo {
      color: #423f37;
  }
  .navbar__logo:hover {
      color: #423f37;
  }
  */

  .navbar .container {
    padding-bottom: 1rem;
  }
  .navbar__menu {
    list-style-type: none;
    margin: 1rem 0 0 0;
    padding: 0;
    display: block;
    position: relative;
    width: 100%;
  }
  .navbar__menu-item {
    display: inline-block;
  }
  .navbar__menu-item a {
    color: #423f37;
    display: block;
    padding: 0 0.3rem;
  }
  .navbar__menu-item a:hover {
    background-color: #f5f5f5;
  }
  .navbar__menu-link {
    line-height: 1.8;
  }
  .navbar-dropdown__content {
    display: none;
    position: absolute;
    left: 0;
    padding: 0;
  }
  .navbar-dropdown__content.navbar-dropdown__content--show {
    background-color: #f5f5f5;
    display: block;
    width: 100%;
    /*height: 2.4rem;*/
    white-space: nowrap;
    padding-top: 1px;
    z-index: 9999;
    filter: drop-shadow(1px 1px #ccc);
  }
  .navbar-dropdown-item {
    display: block;
    padding: 0;
    border-top: 1px solid #fff;
  }
  .navbar-dropdown-item a {
    color: #423f37;
    line-height: 1.8rem;
  }
  .navbar-dropdown-item a:hover {
    background-color: #e6e6e6;
  }
}

